--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">QuizCreatorApp</string>
+    <string name="TAG">QuizCreatorApp</string>
     <string name="web_client_id">972160576763-8s4b8kre3vvjkfiigod2chh413128hp8.apps.googleusercontent.com</string>
 </resources>
